[package]
name = "nvis"
version = "0.1.2"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A very simple input visualizer"
license = "MIT"
homepage = "https://github.com/woodruffw/nvis"

[badges]
travis-ci = { repository = "woodruffw/nvis", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
base32 = "0.4.0"
base64 = "0.13.0"
byteorder = "1.4.3"
clipboard = "0.5.0"
cursive = "0.16"
hex = "0.4.3"
